noinst_SCRIPTS = readeq-real-2D-mono \
				 readeq-cplx-2D-mono \
				 readeq-real-1D-mono \
				 readeq-cplx-1D-mono \
				 readeq-real-2D-multi \
				 readeq-cplx-2D-multi-mpi \
				 readeq-real-2D-multi-mpi \
				 readeq-cplx-2D-multi

DISTCLEANFILES = $(noinst_SCRIPTS)
EXTRA_DIST = readeq-real-2D-mono \
			 readeq-cplx-2D-mono \
			 readeq-real-1D-mono \
			 readeq-cplx-1D-mono \
			 readeq-real-2D-multi \
			 readeq-cplx-2D-multi-mpi \
			 readeq-real-2D-multi-mpi \
			 readeq-cplx-2D-multi

