AM_FFLAGS = -fPIC

lib_LTLIBRARIES = libarnoldi.la

libarnoldi_la_SOURCES  = zhessen.f zcheckset.f zvrand.f zdel.f \
						 zestnor.f zellipr.f  \
						 zellipi.f zordon.f    zcheby.f zresid.f \
						 zschur.f  zarncheb.f \
						 zeigvec.f zellipm.f \
						 zhager.f drzarncheb.f drzeigvec.f \
						 darncheb.f ddel.f dellipm.f dhager.f drdarncheb.f \
						 dschur.f dcheby.f deigvec.f dellipr.f \
						 dhessen.f drdeigvec.f dvrand.f \
						 dcheckset.f dellipi.f destnor.f dordon.f dresid.f 

clean-local:
	rm -f *.mod
