lib_LTLIBRARIES = libgetpar.la

libgetpar_la_SOURCES = dfetch.f findstring.f getdouble.f getinteger.f \
					   getreal.f getstring.f gpsort.f ifetch.f read_file.f \
					   read_stdin.f rfetch.f sfetch.f sortwithkey.f \
					   term_string.f readc2i.f readc2r.f readc2d.f readc2s.f \
					   mgetpar.f90

EXTRA_DIST = undefined.h GP_common.h

clean-local:
	rm -f *.mod
